# moodle_olympyc_analyzer

./: .gitignore  BUILD_WINDOWS.md  README.md
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: excel_parser.rs  handlers.rs  main.rs  models.rs  stats.rs  stats_handlers.rs  upload_handler.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/binaries/: backend-x86_64-unknown-linux-gnu
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: index.js
frontend/src/components/: Layout.jsx  LoadingSkeleton.jsx  Sidebar.jsx  StatCard.jsx  StudentModal.jsx  UploadModal.jsx
frontend/src/i18n/: en.js  index.jsx  ru.js  tk.js
frontend/src/pages/: Dashboard.jsx  Institutions.jsx  Students.jsx  Subjects.jsx  TopStudents.jsx
frontend/src/styles/: global.css
frontend/src/utils/: export.js
