[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["multipart"]}
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel parsing
calamine = "0.34.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3.23"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

multer = "3.1"
bytes = "1.5"